added ITIL and E14 certificates, fixed some spelling errors

--- a/src/styles/modules/_certificates.scss
+++ b/src/styles/modules/_certificates.scss
@@ -50,6 +50,20 @@
 		margin: auto;
 	}
 
+	&__certificate--e14 {
+		position: relative;
+		max-width: 250px;
+		overflow: hidden;
+		margin: auto;
+	}
+
+	&__certificate--itil {
+		position: relative;
+		max-width: 250px;
+		overflow: hidden;
+		margin: auto;
+	}
+
 	&__certificate-description {
 		position: absolute;
 		display: flex;
